# bloxcode-cli

./: .gitignore  README.md  install.sh  package-lock.json  package.json
.github/workflows/: build.yml
src/: cli.ts  ipc.ts
src/agents/: orchestrator.ts
src/core/: config.ts  llm.ts  providers.ts  types.ts
src/mcp/: client.ts
src/tools/: builtin.ts  registry.ts
tui/: Cargo.toml
tui/.cargo/: config.toml
tui/src/: main.rs
