[package]
name = "bloxcode-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bloxcode"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
unicode-width = "0.2"
